--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 	<head>
 		<title>Octocats</title>
+		<link rel="stylesheet" href="styles.css">
 	</head>
-
 	<body>
 
 	<ul class="octodex">
@@ -62,6 +62,69 @@
       <div class="image-caption">
         <span>the</span>
         <a href="https://octodex.github.com/carlostocat">Carlostocat</a>
+        <span>by</span>
+        <ul class="authors">
+          <li>
+            <a href="https://github.com/jeejkang">
+              <img src="https://github.com/jeejkang.png" />
+            </a>
+          </li>
+        </ul>
+      </div> <!-- .image-caption -->
+    </div> <!-- .image-footer -->
+  </li>
+	<li class="octocat">
+    <a href="https://octodex.github.com/luchadortocat">
+      <img src="https://octodex.github.com/images/luchadortocat.png" />
+    </a>
+    <div class="image-footer">
+      <span class="image-number">115</span>
+      <div class="image-caption">
+        <span>the</span>
+        <a href="https://octodex.github.com/saritocat">Luchadortocat</a>
+        <span>by</span>
+        <ul class="authors">
+          <li>
+            <a href="https://github.com/jeejkang">
+              <img src="https://github.com/jeejkang.png" />
+            </a>
+						<a href="https://github.com/JohnCreek" />
+							<img src="https://github.com/JohnCreek.png" />
+						</a>
+          </li>
+        </ul>
+      </div> <!-- .image-caption -->
+    </div> <!-- .image-footer -->
+  </li>
+  <li class="octocat">
+    <a href="https://octodex.github.com/foundingfather_v2">
+      <img src="https://octodex.github.com/images/foundingfather_v2.png" />
+    </a>
+    <div class="image-footer">
+      <span class="image-number">100</span>
+      <div class="image-caption">
+        <span>the</span>
+        <a href="https://octodex.github.com/foundingfather_v2">Founding Father v2</a>
+        <span>by</span>
+        <ul class="authors">
+          <li>
+            <a href="https://github.com/jeejkang">
+              <img src="https://github.com/jeejkang.png" />
+            </a>
+          </li>
+        </ul>
+      </div> <!-- .image-caption -->
+    </div> <!-- .image-footer -->
+  </li>
+  <li class="octocat">
+    <a href="https://octodex.github.com/yaktocat">
+      <img src="https://octodex.github.com/images/yaktocat.png" />
+    </a>
+    <div class="image-footer">
+      <span class="image-number">109</span>
+      <div class="image-caption">
+        <span>the</span>
+        <a href="https://octodex.github.com/yaktocat">Yaktocat</a>
         <span>by</span>
         <ul class="authors">
           <li>
